<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="settings"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_settings"
        android:shortcutShortLabel="@string/settings">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="dev.droplet.app"
            android:targetClass="dev.droplet.app.SettingsActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="tv"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_tv"
        android:shortcutShortLabel="@string/tv_open"
        android:shortcutLongLabel="@string/tv_shortcut_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="dev.droplet.app"
            android:targetClass="dev.droplet.app.tv.TvActivity" />
    </shortcut>
</shortcuts>
